First version of implementation remarks finished

--- a/bem_summer_school/_toc.yml
+++ b/bem_summer_school/_toc.yml
@@ -5,6 +5,7 @@ parts:
   chapters:
   - file: discretisation.ipynb
   - file: linear_system_solve.ipynb
+  - file: implementation.ipynb
 - caption: Fast direct solvers
   chapters:
   - file: low_rank_compression.ipynb
